--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,11 @@
     <string name="user_name">User name</string>
     <string name="Password">Password</string>
     <string name="register_an_account">Register an account</string>
+    <string name="fail_register">Failed to register: %1$s</string>
+    <string name="save_success">Saved successfully</string>
+    <string name="log_in">Log in</string>
+    <string name="xxjohndoexx">xxJohnDoeXx</string>
+    <string name="username">Username</string>
+    <string name="fail_login">Fail to log in: %1$s</string>
+    <string name="Invalid_login">Invalid user name or password</string>
 </resources>
